system/infrastructure/k8s/auth-service/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: auth-service
  labels:
    app: auth-service
    app.kubernetes.io/name: auth-service
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: 3p-sistema

spec:
  replicas: 3

  selector:
    matchLabels:
      app: auth-service

  template:
    metadata:
      labels:
        app: auth-service
        app.kubernetes.io/name: auth-service
        app.kubernetes.io/component: backend
        app.kubernetes.io/part-of: 3p-sistema

    spec:
      containers:
        - name: auth-service
          image: ghcr.io/nxtannnn1/auth-service:sha-00143a3e01f17c23160eddba87cba68f5b6289c1
          imagePullPolicy: IfNotPresent

          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 999
            runAsGroup: 999
            capabilities:
              drop:
                - ALL

          imagePullSecrets:
            - name: ghcr-auth

          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            failureThreshold: 30
            periodSeconds: 5
            timeoutSeconds: 3

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
