system/infrastructure/k8s/auth-service/service.yml
apiVersion: v1
kind: Service

metadata:
  name: auth-service
  labels:
    app.kubernetes.io/name: auth-service
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: 3p-sistema

spec:
  selector:
    app: auth-service

  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080

  type: ClusterIP
